--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -6,7 +6,7 @@
     min-height: 100vh;
     width: 100vw;
     margin: 0;
-    /* padding: 10px; */
+    /* padding: 10px; */ /* Optional padding, adjust based on preference */
     gap: 10px;
 }
 
@@ -22,13 +22,9 @@
     /* justify-items: center; */
 }
 
-@media only screen and (max-width: 768px) {
-    .form-group {
-        grid-template-columns: 1fr; /* Set a single column for small screens */
-        align-items: flex-start; /* Optional: Align content at the top within the column */
-        gap: 5px;
-        width: 80%;
-    }
+.checkbox {
+    display: grid;
+    grid-template-columns: 0.8fr 0.2fr;
 }
 
 .login input {
@@ -68,4 +64,14 @@
 .error {
     color: red;
     font-size: 0.8rem;
+}
+
+/* Media query for small screens (optional) */
+@media only screen and (max-width: 768px) {
+    .form-group {
+        grid-template-columns: 1fr; /* Set a single column for small screens */
+        align-items: flex-start; /* Optional: Align content at the top within the column */
+        gap: 5px;
+        width: 80%;
+    }
 }
