--- a/client/src/components/Register.css
+++ b/client/src/components/Register.css
@@ -22,6 +22,11 @@
     /* justify-items: center; */
 }
 
+.checkbox {
+    display: grid;
+    grid-template-columns: 0.8fr 0.2fr;
+}
+
 @media only screen and (max-width: 768px) {
     .form-group {
         grid-template-columns: 1fr; /* Set a single column for small screens */
@@ -43,6 +48,21 @@
 .register input:focus {
     outline: none; /* Remove default outline on focus */
     border-color: #4caf50; /* Change border color to match button on focus */
+}
+
+.addVehicleButton {
+    background-color: #4caf50; /* Green color (inherited from registerButton) */
+    border: none;
+    color: white;
+    padding: 8px 16px; /* Smaller padding than registerButton */
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px; /* Slightly smaller font size than registerButton */
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px; /* Inherited from registerButton */
+    transition: 0.3s ease all; /* Inherited from registerButton */
 }
 
 .registerButton {
